# ai-typehinter

./: .gitignore  .gitmodules  README.md  call_graph_analyzer.py  conversation.py  main.py  pyproject.toml  read_processed_typehints.py  test_call_graph_analyzer.py  test_type_hint_remover.py  type_hint_evaluator.py  type_hint_remover.py  typehinter.py  utils.py
repomap/: pyproject.toml
repomap/repomap/: __main__.py  io.py
repomap/tests/: test_repomap.py
scripts/: instance_var_collector.py  remove_typehints_with_comments.py
